In the entity Show the name and key in the attributes datagridview Implemented the Charter New option Fixed the new entity form (add the key feature) Made some improvement to NewEntityForm

--- a/ChartER/ChartER/frmMain.resx
+++ b/ChartER/ChartER/frmMain.resx
@@ -194,6 +194,22 @@
         RK5CYII=
 </value>
   </data>
+  <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAG4AAABgCAYAAAD8UUeLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIuSURBVHhe7ddhSgNBEERhb+r9Qb1C3EWDg1bipjM9O9Xz
+        HhRIwPnRHxF8uZBlwJkGnGnAmQacacCZBpxpwJkGnGnAmQbcd++vr3Kztjycwto3e8vCKax9Li0Hp7Cu
+        c2opOIXVzqll4BRUO7eA2+bYEnAKq51j5eEU1O85Btw2x0rDKSQ1x5aFe2t+doxv3DbHgNvmGHDbHAPu
+        exllvbsHXLOeZbzZBlyznmW82Qbcr/Wo93sq4G4sUq93jrQ0XPtP+K0dSf3edVmVhttTx2x3BO/IPsRn
+        mfGnctuzeAptX2Zl4dQhj6zXNzC7knDqkI+sB1525eDUEUdvRKXg1BFHb1Rl4NQRR29kJeDUEUfujOzh
+        1CFH7qxs4dQRo3v0vRmyhFPHjM41Ozh1/Mjcs4JTAJFVyAZOAURWJQs4BRBZpaaHUwCRVWtqOAUQWcWm
+        hVMAkVVtSjgFEFnlpoJTx4+uetPAqeNHt0JTwKnjR7ZSp8MpgMhW61Q4BRDZip0GpwAiW7VT4BRAZCs3
+        HE4BRLZ6Q+EUQGQ0CE4dPzr6Kh1OHT86+ikVTh0/MvpbGpwCiIx0KXAKIDK6XXc4BRAZ3a8rnAKIjP5v
+        Ojg61lRwdLxp4OixpoCjx+sKt6dg7o1idYe7ppDa0XOdAkfPlwa3B1peqXDXAOvfEDjqH3CmAWcacKYB
+        ZxpwpgFnGnCmAWcacKYBZxpwpgFnGnCmAWcacKYBZxpwpgFnGnCmAWfZ5fIJal++gWmZAGcAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
   <data name="tsbCopy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHoAAAB0CAYAAABKUyaUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
